# rs-git-msg

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  rust.yml
scripts/: install.sh  release.sh  setup-lazygit.sh  uninstall.sh
src/: commit.rs  git.rs  main.rs  mocks.rs
src/ai/: gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs  provider_factory.rs
