[package]
name = "rs-git-msg"
version = "0.1.3"
edition = "2024"
description = "AI-powered git commit message generator"
authors = ["Chuan-Jhe Huang <cjhwong@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CJHwong/rs-git-msg"
repository = "https://github.com/CJHwong/rs-git-msg"
keywords = ["git", "commit", "message", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tempfile = "3.8"

[dev-dependencies]
cargo-husky = { version = "1.5", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
cargo-release = "0.25.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
